--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
-    <head>
-        <title>Aldi Yunan Anwari</title>
-    </head>
-    <body>
-        <script>
-            location.replace("https://Aldiyunan07.github.io/Portfolio/index.html")
-        </script>
-    </body>
+  <head>
+    <title>Aldi Yunan Anwari</title>
+  </head>
+  <body>
+    <script>
+      location.replace("https://dendimugia23.github.io/Portfolio/index.html");
+    </script>
+  </body>
 </html>
